Login page and functionality done

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
-NEXT_PUBLIC_API_KEY=AIzaSyCKbVmVtUDjxEFtysI5yBfoc8nLc8Wam2I
-NEXT_PUBLIC_AUTH_DOMAIN=recipe-app-bac2f.firebaseapp.com
-NEXT_PUBLIC_PROJECT_ID=recipe-app-bac2f
-NEXT_PUBLIC_STORAGE_BUCKET=recipe-app-bac2f.appspot.com
-NEXT_PUBLIC_MESSAGING_SENDER_ID=788111692501
-NEXT_PUBLIC_APP_ID=1:788111692501:web:dd1f1b804764d94aa4485c
+NEXT_PUBLIC_API_KEY=AIzaSyAyc3VrOy8Jh4N6VVaC5ItbUas1KbaSJCY
+NEXT_PUBLIC_AUTH_DOMAIN=cabinsite-e8b6b.firebaseapp.com
+NEXT_PUBLIC_DB_URL=https://cabinsite-e8b6b.firebaseio.com
+NEXT_PUBLIC_PROJECT_ID=cabinsite-e8b6b
+NEXT_PUBLIC_STORAGE_BUCKET=cabinsite-e8b6b.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=950596908057
+NEXT_PUBLIC_APP_ID=1:950596908057:web:6d74fe15aa56b69d5da688
