--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-image-gallery": "^1.2.11",
     "react-toastify": "^9.1.2"
   }
 }
