--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.2.11",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2"
   }
 }
