--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^9.19.1",
     "framer-motion": "^10.10.0",
     "next": "13.2.4",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
