--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fullcalendar/google-calendar": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
+    "dotenv": "^16.3.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "framer-motion": "^10.10.0",
     "next": "^13.2.3",
     "next-transpile-modules": "^10.0.0",
+    "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
